--- a/flutter_appwrite/pubspec.yaml
+++ b/flutter_appwrite/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   appwrite: ^13.0.0
+  image_picker: ^1.1.2
+  shared_preferences: ^2.3.2
+  provider: ^6.1.2
 
 
 dev_dependencies:
