Implemented Lottie Animation for loading and implemented reusable primary button

--- a/flutter_appwrite/pubspec.yaml
+++ b/flutter_appwrite/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.2
   provider: ^6.1.2
+  lottie: ^3.1.2
 
 
 dev_dependencies:
@@ -62,6 +63,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/lottie/
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
