--- a/flutter_appwrite/pubspec.yaml
+++ b/flutter_appwrite/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   provider: ^6.1.2
   lottie: ^3.1.2
   intl: ^0.19.0
-
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +67,7 @@ flutter:
 
   assets:
     - assets/lottie/
+    - assets/images/
 
 
   # To add assets to your application, add an assets section, like this:
