--- a/flutter_appwrite/pubspec.yaml
+++ b/flutter_appwrite/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   lottie: ^3.1.2
   intl: ^0.19.0
   infinite_scroll_pagination: ^4.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
